# python-project-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  pytest.ini  summary.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: generate-dashboard.js  generate_dashboard.py  generate_issue_report.py
.github/workflows/: dashboard-generator.yml  issue-report.yml  issue-tracker.yml  python-test.yml
